--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-table": "^7.7.12",
     "@types/redux-saga": "^0.10.5",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.27.2",
@@ -20,6 +21,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
+    "react-table": "^7.7.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
